Enhance DJL backend with robust face embedding extraction, model-aware preprocessing, concurrency control, and TensorFlow engine support