@@ -634,8 +634,8 @@ public class VisionTool {
             }
 
             // Use the highest confidence face (first embedding)
-            float[] sourceEmbedding = sourceEmbeddings.getFirst();
-            float[] targetEmbedding = targetEmbeddings.getFirst();
+            float[] sourceEmbedding = sourceEmbeddings.get(0);
+            float[] targetEmbedding = targetEmbeddings.get(0);
 
             // Delegate evaluation to a shared helper to keep logic consistent with other methods
             return evaluateSimilarityAndBuildResponse(sourceEmbedding, targetEmbedding, sourceEmbeddings.size(), targetEmbeddings.size(), startTime);
